--- a/src/main/resources/assets/thinking/lang/zh_cn.json
+++ b/src/main/resources/assets/thinking/lang/zh_cn.json
@@ -5,15 +5,16 @@
   "item.thinking.fish": "萨卡班甲鱼",
   "item.thinking.brain": "脑子",
   "item.thinking.lava_netherite_boots": "落地熔岩下界合金靴子",
+  "item.thinking.potion_throwing_glove": "药水投掷手套",
   "enchantment.thinking.explosive": "爆炸",
   "enchantment.thinking.motionless_sneak": "潜行不动",
   "enchantment.thinking.crawl": "爬",
   "enchantment.thinking.blast_ejection": "爆炸起飞",
-  "enchantment.thinking.split": "分裂",
   "enchantment.thinking.absolute_loyalty": "绝对忠诚",
   "enchantment.thinking.nemesis": "不受欢迎",
   "enchantment.thinking.mlg_lava": "落地熔岩",
   "enchantment.thinking.fire_walking": "走火",
   "enchantment.thinking.social_phobia": "社交恐惧症",
+  "enchantment.thinking.babbling": "胡言乱语",
   "itemGroup.thinking.thinking_group": "别吵, 我正在思考"
 }
