添加头皮屑附魔

--- a/src/main/resources/assets/thinking/lang/zh_cn.json
+++ b/src/main/resources/assets/thinking/lang/zh_cn.json
@@ -16,5 +16,6 @@
   "enchantment.thinking.fire_walking": "走火",
   "enchantment.thinking.social_phobia": "社交恐惧症",
   "enchantment.thinking.babbling": "胡言乱语",
+  "enchantment.thinking.dandruff": "头皮屑",
   "itemGroup.thinking.thinking_group": "别吵, 我正在思考"
 }
