--- a/src/main/resources/assets/thinking/lang/zh_cn.json
+++ b/src/main/resources/assets/thinking/lang/zh_cn.json
@@ -17,5 +17,6 @@
   "enchantment.thinking.social_phobia": "社交恐惧症",
   "enchantment.thinking.babbling": "胡言乱语",
   "enchantment.thinking.dandruff": "头皮屑",
+  "enchantment.thinking.noisy": "吵闹",
   "itemGroup.thinking.thinking_group": "别吵, 我正在思考"
 }
